fixes scrollbar and maing page alignment

--- a/meal-ui/src/styles/local/layouts/layouts.scss
+++ b/meal-ui/src/styles/local/layouts/layouts.scss
@@ -11,6 +11,10 @@ body {
 	overflow-x: hidden;
 }
 
+body::-webkit-scrollbar {
+	display: none;
+}
+
 // main instead of body, as main is where our content lives
 main {
 	padding-left: var(--sidebar-width);
